# FastFsm

./: .gitignore  .mcp.json  .nuget.windows.config  ARCHITECTURE-DIAGRAM.md  BUILD.md  DUAL-BUILD.md  Directory.Build.props  FastFsm.Net  FastFsm.Net.sln  FastFsm.Net.slnx  IMPLEMENTATION-GUIDE.md  LICENSE  PORTABLE-BUILD.md  QUICK-REFERENCE.md  TROUBLESHOOTING.md  TestDiagnose.cs  TestExceptionMachine.cs  TestSimple.cs  api.md  basicguardsaction.md  benchresult.txt  build-and-test.ps1  build-and-test.sh  build-for-vs-simple.ps1  build-for-vs.ps1  build-order.sh  build.ps1  build_output.txt  buildlog.txt  cs0108.md  debug_test.cs  dualbuild.md  existinghelpers.md  f07.md  f08.md  f09.md  final_patch.diff  fsmerrors.md  helpers.md  installation.md  (+20 more)
.claude/: settings.local.json
ATMExample/: ATMExample.csproj  Program.cs  nuget.config
Benchmark/: Benchmark.csproj  HierarchicalStateMachineBenchmarks.cs  HsmBenchmarks.cs  Machines.cs  MemoryBenchmarks.cs  Program.cs  StateMachineBenchmarks.cs  a.txt  run.ps1
Benchmark.Java/: pom.xml  run.ps1
Benchmark.JavaScript/: benchmark.js  run.ps1
Benchmark.Rust/: Cargo.toml  fsm_bench.rs  run.ps1
Benchmark.Rust/benches/: fsm_async_bench.rs  fsm_bench.rs
Benchmark.Rust/src/: async_cold.rs  async_event.rs  async_fsm.rs  async_hot.rs  basic.rs  guard.rs  lib.rs  payload.rs
Benchmark.TypeScript/: README.md  benchmark.js  benchmark.ts  package.json  run.ps1  tsconfig.json
Benchmark.cpp/: CMakeLists.txt  main.cpp  run.ps1  vcpkg.json
Benchmarkl/: Class1.cs
CleanUp/: ActionsOnlyStateMachine.cs  BasicStateMachine.cs  CleanUp.csproj  GuardsActionsStateMachine.cs  GuardsOnlyStateMachine.cs  HsmHistoryStateMachine.cs  HsmPayloadGuardsStateMachine.cs  HsmSimpleStateMachine.cs  InternalOnlyStateMachine.cs  PayloadGuardsStateMachine.cs  Program.cs
Experiments/: Experiments.csproj  FileLogger.cs  FullMultiPayloadMachine.cs  PayloadTypeTracker.cs  Program.cs
Experiments.Logging/: Experiments.Logging.csproj  Program.cs  TestExtension.cs
FastFsm.Async.Tests/: ExceptionAsyncMachine.cs  FastFsm.Async.Tests.csproj
FastFsm.DependencyInjection/: FastFsm.DependencyInjection.csproj
FastFsm.DependencyInjection.Tests/: DITestBase.cs  ExtensionsVariantDITests.cs  FastFsm.DependencyInjection.Tests.csproj  FullVariantDITests.cs
FastFsm.HsmPrototype/: FastFsm.HsmPrototype.csproj  Program.cs  milestone2.3.txt
FastFsm.Logging.Tests/: ExtensionLoggingTests.cs  FastFsm.Logging.Tests.csproj  LoggingExamples.cs  LoggingIntegrationTests.cs  LoggingTestBase.cs  Machines.cs  SpecialCasesLoggingTests.cs  (+2 more)
(+516 files in other folders)
