[package]
name = "fsm_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
async-trait = "0.1"
statig = { version = "0.4.1", default-features = false, features = ["async"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# brak fsmentry – mamy stub

[[bench]]
name = "fsm_bench"
harness = false

[[bench]]
name = "fsm_async_bench"
harness = false